...

<resources>
    <string name="app_name">TeamCityApp</string>

    <!--drawer items-->
    <string name="home_drawer_item">Home</string>
    <string name="projects_drawer_item">Projects</string>
    <string name="favorites_drawer_item">Favorites</string>
    <string name="running_builds_drawer_item">Running builds</string>
    <string name="build_queue_drawer_item">Build queue</string>

    <!--Home navigation-->
    <string name="home_navigation_builds">Builds</string>
    <string name="home_navigation_queue">Queue</string>
...
    <string name="empty_list_message_builds">No builds</string>
    <string name="empty_list_message_running_builds">No running builds</string>
    <string name="empty_list_message_favorite_running_builds">No favorite running builds</string>
    <string name="empty_list_message_build_queue">Builds queue is empty</string>
    <string name="empty_list_message_favorite_build_queue">Favorite builds queue is empty</string>
    <string name="empty_list_message_projects_or_build_types">No projects or build configurations</string>
    <string name="empty_list_message_favorites">No favorite configurations added</string>

    <!--Build elements-->
    <string name="unknown_trigger_type_text">Unknown trigger type!</string>
    <string name="triggered_deleted_user_text">Deleted user</string>
    <string name="triggered_deleted_configuration_text">Deleted configuration</string>
    <string name="build_result_section_text">Result</string>
...
    <string name="text_menu_add_to_favorites">Add to favorites</string>
    <string name="text_menu_remove_from_favorites">Remove from favorites</string>
    <string name="text_filters_applied">Build filters have been applied</string>
    <string name="text_agents_filters_applied">Agents filters have been applied</string>
    <string name="text_queued_header">Queued</string>
    <string name="text_snackbar_button_reset_filters">Reset filters</string>
    <string name="text_add_to_favorites">The configuration has been added to favorites</string>
    <string name="text_remove_from_favorites">The configuration has been removed from favorites</string>
    <string name="text_view_favorites">Open favorites</string>

    <!--Filter builds activity-->
    <string name="title_filter_builds">Filter builds</string>

    <!--Onboarding-->
    <string name="title_onboarding_navigation_drawer">Explore navigation drawer</string>
...
    <string name="title_onboarding_filter_agents">Filter agents</string>
    <string name="text_onboarding_filter">Filter builds by only your favorite configurations or show all running ones. Default filter is set to show only builds by your favorite configurations.</string>
    <string name="text_onboarding_filter_queued">Filter builds by only your favorite configurations or show all queued ones. Default filter is set to show only builds by your favorite configurations.</string>
    <string name="text_onboarding_filter_agents">Filter agents by connected or disconnected ones. Default filter is set to show only connected agents.</string>

    <!--Favorites-->
    <string name="text_info_add">Add a configuration to favorites for an easy access</string>
    <string name="text_info_add_action">Add projects</string>

    <!--Rate-->

    <!--Filter bottom sheet-->


...
