...
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <item type="id" name="itemSubTitle" />
    <item type="id" name="section_text" />
</resources>
