...
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/itemTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:text="@string/default_name_value"
    style="@style/ItemTitle" />
