...
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<com.google.android.material.floatingactionbutton.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/floating_action_button"
    style="@style/BaseFloatingActionButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:src="@drawable/ic_add_black_24dp" />
