<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_to_favorites"
        android:icon="@drawable/ic_favorite_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/text_menu_remove_from_favorites" />
    <item
        android:id="@+id/filter_builds"
        android:icon="@drawable/ic_filter_list_white_24px"
        app:showAsAction="ifRoom"
        android:title="@string/text_menu_filter_builds" />
</menu>