<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/projects"
        android:enabled="true"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/projects_drawer_item" />
    <item
        android:id="@+id/favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/favorites_drawer_item" />
    <item
        android:id="@+id/running_builds"
        android:enabled="true"
        android:icon="@drawable/ic_directions_run_white_24px"
        android:title="@string/home_navigation_builds" />
    <item
        android:id="@+id/build_queue"
        android:enabled="true"
        android:icon="@drawable/ic_layers_white_24dp"
        android:title="@string/home_navigation_queue" />
    <item
        android:id="@+id/agents"
        android:enabled="true"
        android:icon="@drawable/ic_directions_railway_black_24dp"
        android:title="@string/drawer_item_agents" />

</menu>