/*
 * Copyright 2020 Andrey Tolpeev
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package com.github.vase4kin.teamcityapp.favorites.view

import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.Espresso.pressBack
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withText
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.platform.app.InstrumentationRegistry
import com.github.vase4kin.teamcityapp.R
import com.github.vase4kin.teamcityapp.TeamCityApplicationBase
import com.github.vase4kin.teamcityapp.api.TeamCityService
import com.github.vase4kin.teamcityapp.dagger.modules.FakeTeamCityServiceImpl
import com.github.vase4kin.teamcityapp.dagger.modules.Mocks
import com.github.vase4kin.teamcityapp.helper.CustomIntentsTestRule
import com.github.vase4kin.teamcityapp.helper.RecyclerViewMatcher.Companion.withRecyclerView
import com.github.vase4kin.teamcityapp.helper.TestUtils
import com.github.vase4kin.teamcityapp.helper.TestUtils.Companion.hasItemsCount
import com.github.vase4kin.teamcityapp.helper.TestUtils.Companion.matchHomeToolbarTitle
import com.github.vase4kin.teamcityapp.home.view.HomeActivity
import com.github.vase4kin.teamcityapp.storage.SharedUserStorage
import io.reactivex.Single
import dagger.hilt.android.testing.HiltAndroidRule
import dagger.hilt.android.testing.HiltAndroidTest
import com.github.vase4kin.teamcityapp.helper.HiltApiTestRule
import org.junit.Before
import org.junit.BeforeClass
import org.junit.Ignore
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.mockito.ArgumentMatchers.anyString
import org.mockito.Mockito.`when`
import org.mockito.Spy

@Ignore("https://github.com/vase4kin/TeamCityApp/issues/362")
@HiltAndroidTest
@RunWith(AndroidJUnit4::class)
class FavoritesFragmentTest {

    @JvmField
    @Rule(order = 0)
    val hiltRule = HiltAndroidRule(this)

    @JvmField
    @Rule(order = 1)
    val mockitoRule = org.mockito.junit.MockitoJUnit.rule().strictness(org.mockito.quality.Strictness.LENIENT)

    @JvmField
    @Rule(order = 2)
    val apiRule = HiltApiTestRule(hiltRule) { teamCityService }

    @Rule(order = 3)
    @JvmField
    val activityRule = CustomIntentsTestRule(HomeActivity::class.java)

    @Spy
    val teamCityService: TeamCityService = FakeTeamCityServiceImpl()

    private val storage: SharedUserStorage
        get() {
            val app =
                InstrumentationRegistry.getInstrumentation().targetContext.applicationContext as TeamCityApplicationBase
            return app.appInjector.sharedUserStorage()
        }

    companion object {
        @BeforeClass
        fun disableOnboarding() {
            TestUtils.disableOnboarding()
        }
    }

    @Before
    fun setUp() {
        val storage = storage
        storage.clearAll()
        storage.saveGuestUserAccountAndSetItAsActive(Mocks.URL, false)
    }

    @Test
    fun testUserCanSeeUpdatedToolbarTitle() {
        // Launch activity
        activityRule.launchActivity(null)

        // click on favorites tab
        clickOnFavoritesTab()

        // Checking toolbar title
        matchHomeToolbarTitle(R.id.home_favorites_toolbar_title, R.string.favorites_drawer_item)
    }

    @Test
    fun testUserCanSeeFavoritesListIfSmthBadHappensInFavoritesLoading() {
        // Prepare mocks
        `when`(teamCityService.buildType(anyString())).thenReturn(Single.error(RuntimeException("smth bad happend!")))
        storage.addBuildTypeToFavorites("id")
        storage.addBuildTypeToFavorites("id2")
        storage.addBuildTypeToFavorites("id3")

        // Launch activity
        activityRule.launchActivity(null)

        // click on favorites tab
        clickOnFavoritesTab()

        // Check empty list
        onView(withId(R.id.favorites_empty_title_view)).check(matches(isDisplayed()))
            .check(matches(withText(R.string.empty_list_message_favorites)))
    }

    @Test
    fun testUserCanSeeLoadEmptyListMessageIfFavoritesIsEmpty() {
        // launch activity
        activityRule.launchActivity(null)

        // click on favorites tab
        clickOnFavoritesTab()

        // Check badge
        checkFavoritesTabBadgeCount("0")

        // Check the list is empty
        onView(withId(R.id.favorites_empty_title_view)).check(matches(isDisplayed()))
            .check(matches(withText(R.string.empty_list_message_favorites)))
    }

    @Test
    fun testUserCanClickOnFabAndSeeProjects() {
        // launch activity
        activityRule.launchActivity(null)

        // click on favorites tab
        clickOnFavoritesTab()

        // click on fab
        onView(withId(R.id.home_floating_action_button)).perform(click())

        // check snack bar text
        onView(withText(R.string.text_info_add)).check(matches(isDisplayed()))

        // click on snack bar action
        onView(withText(R.string.text_info_add_action)).perform(click())

        // Checking toolbar title
        matchHomeToolbarTitle(R.id.home_projects_toolbar_title, R.string.projects_drawer_item)
    }

    @Test
    fun testUserCanAddBuildTypeToFavorites() {
        // prepare mocks
        `when`(teamCityService.buildType(Mocks.buildTypeMock().id)).thenReturn(Single.just(Mocks.buildTypeMock()))

        // launch activity
        activityRule.launchActivity(null)

        // Open build type
        onView(withText("build type"))
            .perform(click())

        // Click on add to favorites
        onView(withId(R.id.add_to_favorites)).perform(click())

        // check snack bar text
        onView(withText(R.string.text_add_to_favorites)).check(matches(isDisplayed()))

        // click on snack bar action
        onView(withText(R.string.text_view_favorites)).perform(click())

        // Checking toolbar title
        matchHomeToolbarTitle(R.id.home_favorites_toolbar_title, R.string.favorites_drawer_item)

        // List has item with header
        onView(withId(R.id.favorites_recycler_view)).check(hasItemsCount(2))
        // Checking header 1
        onView(
            withRecyclerView(R.id.favorites_recycler_view).atPositionOnView(
                0,
                R.id.section_text
            )
        )
            .check(matches(withText("Secret project")))
        // Checking adapter item 1
        onView(withRecyclerView(R.id.favorites_recycler_view).atPositionOnView(1, R.id.title))
            .check(matches(withText("build type")))
    }

    @Test
    fun testFavoritesListRefreshesOnResume() {
        // prepare mocks
        storage.addBuildTypeToFavorites(Mocks.buildTypeMock().id)
        `when`(teamCityService.buildType(Mocks.buildTypeMock().id)).thenReturn(Single.just(Mocks.buildTypeMock()))

        // launch activity
        activityRule.launchActivity(null)

        // click on favorites tab
        clickOnFavoritesTab()

        // Check badge
        checkFavoritesTabBadgeCount("1")

        // List has item with header
        onView(withId(R.id.favorites_recycler_view)).check(hasItemsCount(2))
        // Checking header 1
        onView(
            withRecyclerView(R.id.favorites_recycler_view).atPositionOnView(
                0,
                R.id.section_text
            )
        )
            .check(matches(withText("Secret project")))
        // Checking adapter item 1
        onView(withRecyclerView(R.id.favorites_recycler_view).atPositionOnView(1, R.id.title))
            .check(matches(withText("build type")))

        // Click on item 1
        onView(withRecyclerView(R.id.favorites_recycler_view).atPositionOnView(1, R.id.title))
            .perform(click())

        // Click on add to favorites
        onView(withId(R.id.add_to_favorites)).perform(click())

        // check snack bar text
        onView(withText(R.string.text_remove_from_favorites)).check(matches(isDisplayed()))

        pressBack()

        // Check badge
        checkFavoritesTabBadgeCount("0")

        // Check the list is empty
        onView(withId(R.id.favorites_empty_title_view)).check(matches(isDisplayed()))
            .check(matches(withText(R.string.empty_list_message_favorites)))
    }

    private fun clickOnFavoritesTab() {
        onView(withId(R.id.favorites))
            .perform(click())
    }

    private fun checkFavoritesTabBadgeCount(count: String) {
        // FIXME
    }
}
